Fix alignment of icons in popup menus

--- a/modules/styles/common.less
+++ b/modules/styles/common.less
@@ -11,6 +11,10 @@
 		li:hover {
 			background: @colorGray14;
 		}
+
+		.mw-ui-icon {
+			vertical-align: middle;
+		}
 	}
 }
 
